--- a/docs/notebooks/workshop.ipynb
+++ b/docs/notebooks/workshop.ipynb
@@ -40,10 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -72,13 +76,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
    "outputs": [],
    "source": [
-    "from kiara import KiaraAPI\n",
+    "from kiara.api import KiaraAPI\n",
     "\n",
     "kiara = KiaraAPI.instance()"
    ]
@@ -1452,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
