--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -78,8 +78,8 @@
    "id": "ae047332",
    "metadata": {},
    "source": [
-    "Last time we only wanted one file, but with language processing we might want a bigger corpus. <br/>\n",
-    "Let's have a look at `download.file_bundle` this time."
+    "NLP tasks usually require large numbers of files. <br/>\n",
+    "This is why *kiara* allows us to work both with individual files and larger corpora. Here we will use the `download.file_bundle` command to load several files."
    ]
   },
   {
@@ -168,7 +168,7 @@
    "id": "6e1d94b5",
    "metadata": {},
    "source": [
-    "So we still want a url, but for a zip file that we can download.\n",
+    "For the purpose of this notebook tutorial, we are using files that are online, so in order for us to use them, we will need to specify the url from where our files live. If our files are stored locally, however, we can use the `import.file.from.local_path' command.\n",
     "Here's some example data for us to use.\n",
     "\n",
     "Again, we need to define the <span style=\"color:green\">inputs</span>, use `kiara.run_job` with our chosen operation `download.file_bundle` and store this as our <span style=\"color:red\">outputs</span>."
