--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "source": [
     "For the purpose of this notebook tutorial, we are using files that are online, so in order for us to use them, we will need to specify the url from where our files live. If our files are stored locally, however, we can use the `import.file.from.local_path' command.\n",
-    "Here's some example data for us to use.\n",
+    "Let's now download our online files.\n",
     "\n",
     "Again, we need to define the <span style=\"color:green\">inputs</span>, use `kiara.run_job` with our chosen operation `download.file_bundle` and store this as our <span style=\"color:red\">outputs</span>."
    ]
