--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -362,7 +362,7 @@
    "id": "586d27e1",
    "metadata": {},
    "source": [
-    "Great, we've successfully imported a bundle of files this time rather than just one. This has given us both the metadata for the files, and the files themselves. As you can see, *kiara* also gives us additional information on the composition of the text files, that is the number of tokens. This information will be useful later when we will intervene on these files to keep track of how we have changed them. For now, let's save the files in a separate variable for us to use later."
+    "Great, we've successfully imported a bundle of files. This has given us both the metadata for the files, and the files themselves. As you can see, *kiara* also gives us additional information on the composition of the text files, that is the number of tokens. This information will be useful later when we will intervene on these files to keep track of how we have changed them. For now, let's save the files in a separate variable for us to use later."
    ]
   },
   {
@@ -690,8 +690,7 @@
    "cell_type": "markdown",
    "id": "3c1ffa13",
    "metadata": {},
-   "source": [
-    "So here we need two <span style=\"color:green\">inputs</span>, the **table** we just made and the name of the **coloumn** we want to pick. \n",
+    "So here we need two <span style=\"color:green\">inputs</span>, the **table** we just made and the name of the **column** we want to pick.\n",
     "\n",
     "Let's specify our outputs again and run the function. In this way, we retain the content of the files as the variable we need for NLP."
    ]
