--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -690,6 +690,7 @@
    "cell_type": "markdown",
    "id": "3c1ffa13",
    "metadata": {},
+   "source": [
     "So here we need two <span style=\"color:green\">inputs</span>, the **table** we just made and the name of the **column** we want to pick.\n",
     "\n",
     "Let's specify our outputs again and run the function. In this way, we retain the content of the files as the variable we need for NLP."
@@ -777,9 +778,9 @@
    "id": "e7163139",
    "metadata": {},
    "source": [
-    "<h3>Language Processing and Topic Modelling</h3>\n",
+    "<h3>Natural Language Processing (Stage 1)</h3>\n",
     "\n",
-    "Great, we've downloaded and prepped our material for text analysis. Not we want to see what kind of functions are included in *kiara* for language processing. Let's have a look and see what's included in the `kiara_plugin.language_processing` package.\n",
+    "Now we are ready for preparing our text for analysis. Let's see what operations are included in *kiara* for NLP in the `kiara_plugin.language_processing` package."
     "\n",
     "<span style=\"color:blue\">Lorella this may/may not need some extra description on what the different operations do</span>"
    ]
