--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -814,7 +814,9 @@
    "id": "52c2eca9",
    "metadata": {},
    "source": [
-    "The contents of our text files have been stored as an **array**, so let's start by tokenizing this using the `tokenize.texts_array` function."
+    "The contents of our text files have been stored as an **array**. Before performing any operation, we should start by tokenising our text. We can do this by using the `tokenize.texts_array` function.\n",
+    "\n",
+    "If you're unsure about which of these operations you should run, you can refer to the in-built explanation in each *kiara* module which clarifies what each operation does. For further information about pros and cons of each pre-processing operation, please refer to this repository [here](https://github.com/DHARPA-Project/TopicModelling-)."
    ]
   },
   {
