--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -995,7 +995,7 @@
    "source": [
     "We can see from the printed preview that this has tokenized the contents for each of the text files we imported.\n",
     "\n",
-    "Now we can work on pre-processing some of this text. Let's look at what options we have in the `preprocess.tokens_array` operation."
+    "Now we can work on pre-processing the text. Let's look at what options we have in the `preprocess.tokens_array` operation."
    ]
   },
   {
@@ -1142,11 +1142,9 @@
    "id": "f6fdb37e",
    "metadata": {},
    "source": [
-    "There's lots of options here to choose from to help pre-process our texts.\n",
+    "*kiara* includes the most widely used text analysis pre-processing operations. Let's try some of them and take a few moments to notice how they change our text.\n",
     "\n",
-    "Let's start by removing a custom **stopwords list**. Feel free to have a play around, and add and change some of the words!\n",
-    "\n",
-    "First, we need to create the **stopwords list**, and there is an operation for that:"
+    "Let's start by removing the so-called stopwords. These are low information words such as articles, pronouns, prepositions, conjunctions, etc. which are not semantically salient. There are numerous stopword lists available for many, though not all, languages which can be easily adapted to the individual researcher's needs. Here we are defining our **stopword list** but do experiment yourself with adding and change some of the words."
    ]
   },
   {
