--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -33,6 +33,7 @@
     "    import sys\n",
     "    print(\"Installing 'kiara_plugin.jupyter'...\")\n",
     "    !{sys.executable} -m pip install -q kiara_plugin.jupyter\n",
+    "    !{sys.executable} -m pip install kiara_plugin.language_processing==0..13\n",
     "    from kiara_plugin.jupyter import ensure_kiara_plugins\n",
     "\n",
     "ensure_kiara_plugins()\n",
