--- a/docs/notebooks/Topic_Modelling.ipynb
+++ b/docs/notebooks/Topic_Modelling.ipynb
@@ -35,7 +35,7 @@
     "    !{sys.executable} -m pip install -q kiara_plugin.jupyter\n",
     "    from kiara_plugin.jupyter import ensure_kiara_plugins\n",
     "\n",
-    "    !{sys.executable} -m pip install kiara_plugin.language_processing==0..13\n",
+    "!{sys.executable} -m pip install kiara_plugin.language_processing==0.4.13\n",
     "\n",
     "ensure_kiara_plugins()\n",
     "\n",
