--- a/docs/notebooks/Hello_kiara.ipynb
+++ b/docs/notebooks/Hello_kiara.ipynb
@@ -1426,6 +1426,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prototype-stage process to add the lineage visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating and exporting lineage viz data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1475,6 +1492,15 @@
     "        \"info\": get_info(node)\n",
     "    }\n",
     "    augmented_nodes[idx] = node_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# displaying the lineage data in viz"
    ]
   },
   {
