test: wip getting lineage data from utils

--- a/docs/notebooks/Network_Analysis.ipynb
+++ b/docs/notebooks/Network_Analysis.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "id": "2b51f811",
    "metadata": {},
    "outputs": [],
@@ -4121,8 +4121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "7b93f091",
+   "execution_count": null,
+   "id": "c0905233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "! pip install observable_jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "cfd41349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4131,51 +4142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "9cf5b1c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "module_graph = output['export_details'].lineage.module_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "e0afa4a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes_data = module_graph.nodes.data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "3aa352a1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NodeDataView' object has no attribute 'lineage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[59], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m augmented_nodes \u001b[39m=\u001b[39m augment_lineage_data(nodes_data,kiara)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/test_tagung/lib/python3.10/site-packages/kiara_plugin/dh_tagung_2023/utils.py:5\u001b[0m, in \u001b[0;36maugment_lineage_data\u001b[0;34m(item, kiara)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39maugment_lineage_data\u001b[39m(item,kiara):\n\u001b[0;32m----> 5\u001b[0m     graph \u001b[39m=\u001b[39m item\u001b[39m.\u001b[39;49mlineage\u001b[39m.\u001b[39mmodule_graph\n\u001b[1;32m      6\u001b[0m     nodes \u001b[39m=\u001b[39m graph\u001b[39m.\u001b[39mnodes\u001b[39m.\u001b[39mdata()\n\u001b[1;32m      7\u001b[0m     augmented_nodes \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NodeDataView' object has no attribute 'lineage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "augmented_nodes = augment_lineage_data(nodes_data,kiara)"
+    "augmented_nodes = augment_lineage_data(output['export_details'],kiara)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "8975c81e",
+   "execution_count": 74,
+   "id": "71b8545f",
    "metadata": {},
    "outputs": [
     {
@@ -4191,13 +4169,13 @@
        " 'info': {'preview': \"dict_data={'files': ['/Users/mariella.decrouychan/Documents/GitHub/kiara_plugin.dh_tagung_2023/docs/notebooks/CKCC_kiara_network.graphml']} data_schema={'title': 'DataExportResult', 'type': 'object', 'properties': {'files': {'title': 'Files', 'description': 'A list of exported files.', 'type': 'array', 'items': {'type': 'string'}}}, 'required': ['files']} python_class=PythonClass(model_id=kiara.modules.included_core_modules.export_as.DataExportResult, category=instance.wrapped_python_class, fields=[python_class_name, python_module_name, full_name])\"}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "viz_data"
+    "augmented_nodes"
    ]
   },
   {
@@ -4214,34 +4192,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5aa1e227",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NodeDataView({'value:f24b6588-6186-4403-b7e3-e76a1ebcc323': {'data_type': 'dict', 'label': '[this value]', 'node_type': 'value', 'data_type_config': {}, 'level': 1}, 'module:zdpuAvkihSbSJzRZWn3PEa5z3U5tpwuV8khF8cHMaJqavQ6j5': {'module_type': 'export.network_data', 'module_config': {'constants': {}, 'defaults': {}, 'target_profile': 'graphml_file', 'source_type': 'network_data'}, 'label': 'export.network_data', 'node_type': 'operation', 'level': 3}, 'value:c77e5153-2ca5-4cb5-b24c-e12a8b6cc95c': {'label': 'base_path (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 4}, 'module:zdpuB2Y7BUC5Bcmt2QmUrxYvVH4XGsUsnFaCYgDSEg2t46xte': {'module_type': 'network_data.extract_largest_component', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'network_data.extract_largest_component', 'node_type': 'operation', 'level': 15}, 'module:zdpuAxDMzNkcHtQZFPdZEM8rZdP9f8Wfz5nSpZWt71QunXWjy': {'module_type': 'assemble.network_data.from.tables', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'assemble.network_data.from.tables', 'node_type': 'operation', 'level': 17}, 'module:zdpuAyKWs8ZppGaFWsvPPNtgwvwDBZL33shrStVKXYNhuHeBR': {'module_type': 'create.table', 'module_config': {'constants': {}, 'defaults': {}, 'source_type': 'file', 'target_type': 'table', 'ignore_errors': False}, 'label': 'create.table', 'node_type': 'operation', 'level': 19}, 'module:zdpuAqy8hVcTfVNNN2aFFgzgrPR32EdGhXAhggeGtFsCjESiV': {'module_type': 'import.local.file', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'import.local.file', 'node_type': 'operation', 'level': 21}, 'value:9bea3251-53dd-490d-9588-c32ae990cf0c': {'label': 'path (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 22}, 'value:7b7ea8d9-a281-447c-954b-7f3be27d7c09': {'label': 'weighted_eigenvector (boolean)', 'node_type': 'value', 'data_type': 'boolean', 'data_type_config': {}, 'level': 10}, 'value:1adc6897-8ee3-46a0-a583-32763ab24488': {'label': 'edges_column_map (dict)', 'node_type': 'value', 'data_type': 'dict', 'data_type_config': {}, 'level': 18}, 'value:ee502b6c-841e-4b3e-b78a-8ed9b6b32c6a': {'label': 'id_column_name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 18}, 'value:e54087e1-1c65-4a72-a289-1d0fef61029c': {'label': 'label_column_name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 18}, 'value:fb60ace8-5d8d-4eec-8b87-854071b4fc12': {'label': 'nodes (table)', 'node_type': 'value', 'data_type': 'table', 'data_type_config': {}, 'level': 18}, 'value:d29354f6-79f9-4cad-8247-1fc89ea17ac6': {'label': 'nodes_column_map (dict)', 'node_type': 'value', 'data_type': 'dict', 'data_type_config': {}, 'level': 18}, 'value:1bf318a5-a41e-46ca-9d6c-6b07f57c833f': {'label': 'source_column_name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 18}, 'value:08938a84-8834-4721-aa27-0fba4ea76b2c': {'label': 'target_column_name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 18}, 'value:60b8acbc-bd61-4e92-9561-9e3f2f9b2c42': {'label': 'name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 4}, 'module:zdpuAxBFGXsmcUnyecyZhzkmf7GexxJGNzVRKkGqCjU1ttVdx': {'module_type': 'create.cut_point_list', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'create.cut_point_list', 'node_type': 'operation', 'level': 5}, 'module:zdpuAp2LvWziY1RiAKfvv1dJLcezxfL9TMMNtNEftThYqTFzU': {'module_type': 'compute.modularity_group', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'compute.modularity_group', 'node_type': 'operation', 'level': 7}, 'module:zdpuAwYwM6zkqJPR3i3QdLALnstTBV58HXYtq7BxfouFkmumt': {'module_type': 'create.eigenvector_rank_list', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'create.eigenvector_rank_list', 'node_type': 'operation', 'level': 9}, 'value:27373392-32d8-47cb-9db2-057ac8ff929f': {'label': 'iterations (integer)', 'node_type': 'value', 'data_type': 'integer', 'data_type_config': {}, 'level': 10}, 'module:zdpuAq2oxLjv4kMxXpbvsEjCcfq8a5rnUE3MLz6tEfTc6SEcn': {'module_type': 'create.betweenness_rank_list', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'create.betweenness_rank_list', 'node_type': 'operation', 'level': 11}, 'module:zdpuApbd83XrLaa8DmoJXE2xAPcTe1cXtRPa81NbJkr5TYxqG': {'module_type': 'create.degree_rank_list', 'module_config': {'constants': {}, 'defaults': {}}, 'label': 'create.degree_rank_list', 'node_type': 'operation', 'level': 13}, 'value:4f783e5b-1dd3-46ca-ae08-4e8e610eda61': {'label': 'weight_column_name (string)', 'node_type': 'value', 'data_type': 'string', 'data_type_config': {}, 'level': 10}, 'value:0eba8dea-ce04-44bf-a39f-0f60cc9ac9f6': {'label': 'number_of_communities (integer)', 'node_type': 'value', 'data_type': 'integer', 'data_type_config': {}, 'level': 8}})"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "id": "b3685702",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_info(node):\n",
-    "        # all this is terribly inefficient\n",
     "        \n",
     "        if node[1][\"node_type\"] == \"operation\":\n",
     "            \n",
@@ -4280,46 +4236,6 @@
     "            \"info\": get_info(node)\n",
     "        }\n",
     "        augmented_nodes[idx] = node_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "7e6828c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x7f791177d0c0>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output['export_details'].lineage.module_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "172263c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "69154829",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "! pip install observable_jupyter"
    ]
   },
   {
