--- a/docs/notebooks/colab/Network_Analysis_Colab.ipynb
+++ b/docs/notebooks/colab/Network_Analysis_Colab.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "80e45108",
    "metadata": {
@@ -164,6 +165,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bdf5436e-27df-483a-aeb8-7c233c25ff30",
    "metadata": {
@@ -181,13 +183,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notebook_path = os.path.abspath('')\n",
-    "\n",
-    "csv_file_path = os.path.join(notebook_path, \"..\", \"..\", \"data\", \"CKCC.csv\")\n",
-    "gml_file_path = os.path.join(notebook_path, \"..\", \"..\", \"data\", \"lesmis.gml\")"
+    "csv_file_path = \"CKCC.csv\"\n",
+    "gml_file_path = \"lesmis.gml\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df817d67",
    "metadata": {
@@ -323,6 +324,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b60ed7f3",
    "metadata": {
@@ -414,6 +416,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "65b7eb75",
    "metadata": {
@@ -562,6 +565,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cdceb572",
    "metadata": {
@@ -881,6 +885,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "92bd53d9",
    "metadata": {
@@ -893,6 +898,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "424caf07",
    "metadata": {
@@ -978,6 +984,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4131f51e",
    "metadata": {
@@ -1382,6 +1389,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dfd3920",
    "metadata": {
@@ -1468,6 +1476,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b023d092",
    "metadata": {
@@ -1585,6 +1594,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c3abd25d",
    "metadata": {
@@ -1797,6 +1807,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca042dcd",
    "metadata": {
@@ -1811,6 +1822,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b7c753f",
    "metadata": {
@@ -1970,6 +1982,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf64d9e3",
    "metadata": {
@@ -2264,6 +2277,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dc58fd4",
    "metadata": {
@@ -2438,6 +2452,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e7d7c167",
    "metadata": {
@@ -2734,6 +2749,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87226096",
    "metadata": {
@@ -2907,6 +2923,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d31c2b35",
    "metadata": {
@@ -3197,6 +3214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed33905c",
    "metadata": {
@@ -3332,6 +3350,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4647f5df",
    "metadata": {
@@ -3366,6 +3385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca8e2a39",
    "metadata": {
@@ -3400,6 +3420,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6d0ea0b3",
    "metadata": {
@@ -3431,6 +3452,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6cb1ebf3",
    "metadata": {
@@ -3462,6 +3484,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50e2cab4",
    "metadata": {
@@ -3486,6 +3509,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "091200df",
    "metadata": {
@@ -3514,6 +3538,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3632c9ec",
    "metadata": {
@@ -3577,6 +3602,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a808853",
    "metadata": {
